get questions in randomized order from quizId